Stylesheet/emote/tag updates 2013-05-27

--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -200,3 +200,13 @@ height:170px;
 background-repeat:no-repeat;
 background-image:url(%%ccyeah%%);
 }
+
+a[href|="/cclove"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:208px;
+background-repeat:no-repeat;
+background-image:url(%%cclove%%);
+}
