--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -399,6 +399,17 @@ a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70p
 a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
+a[href|="/velvetfilly"]
+{
+display: block;
+clear: none;
+float: left;
+background-repeat: no-repeat;
+background-image: url(%%foe-em6-v01%%);
+}
+a[href|="/velvetfilly"]{background-position: -0px -0px; width: 91px; height: 130px; }
+
+
 a[href|="/advicebj"]
 {
     width: 305px !important;
