--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -245,7 +245,7 @@ a[href|="/supershy"], a[href|="/ohhmy"] {
     }
 /* FANCY SHEET I MEAN SHEET #4 */
 
-a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"]  {
+a[href|="/dappershy"], a[href|="/fancyshy"], a[href|="/colonthree"], a[href|="/cutieflutter"], a[href|="/flutterland"], a[href|="/lostinflutterland"], a[href|="/mad"], a[href|="/attention"], a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"], a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"],  a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"], a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"], a[href|="/chibiflutterspy"], a[href|="/chibispy"], a[href|="/cloudfilly"], a[href|="/cloudshy"], a[href|="/pleeease"], a[href|="/flutterplease"] {
 
         display: block;
     clear: none;
@@ -277,6 +277,42 @@ a[href|="/flutterchill"], a[href|="/fluttercool"], a[href|="/chillshy"] {
 a[href|="/allyouneed"], a[href|="/ilu"], a[href|="/shylove"] {
     width: 137px;
     background-position: -1003px -0px;
+    }
+a[href|="/cloudfilly"], a[href|="/cloudshy"] {
+    width: 153px;
+    background-position: -1140px -0px;
+    }
+a[href|="/chibiflutterspy"], a[href|="/chibispy"] {
+    width: 161px;
+    background-position: -1293px -0px;
+    }
+a[href|="/flutterconcerned"], a[href|="/areyouokay"], a[href|="/shyconcerned"] {
+    width: 99px;
+    background-position: -1454px -0px;
+    }
+a[href|="/flutterhood"], a[href|="/bunnyhood"], a[href|="/bunnyhoodshy"] {
+    width: 148px;
+    background-position: -1553px -0px;
+    }
+a[href|="/pleeease"], a[href|="/flutterplease"] {
+    width: 114px;
+    background-position: -1701px -0px;
+    }
+
+/* BUTTS SHEET #5 WOO THE EMOTES NEVER END */
+
+a[href|="/flutterhide"], a[href|="/flutterbox"] {
+
+    display: block;
+    clear: none;
+    float: left;
+    height: 200px;
+    background-image: url(%%fluttersheet5%%) !important
+    }
+
+a[href|="/flutterhide"], a[href|="/flutterbox"] {
+    width: 221px;
+    background-position: -277px -0px;
     }
 /* Wide Emotes */
 
@@ -632,7 +668,7 @@ display: none !important;
 
 /* Best sidebar Filly */
 
-.side a[href="http://fav.me/d5es5w1"]{
+.side a[href|="http://fav.me/d64zrgu"] {
    display: block;
    height: 120px;
    width: 120px;
