--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1558,7 +1558,7 @@ a[href|="/girderpy"]
 }
 /* end GIR sheet */
 
-/* sheet 10 */
+/* sheet 11 */
 a[href|="/longbon"],
 a[href|="/wmfluffle"],
 a[href|="/yourewinner"],
@@ -1569,7 +1569,11 @@ a[href|="/banjopony"],
 a[href|="/rdthor"],
 a[href|="/bacardibelledrama"],
 a[href|="/imablatheredprincess"],
-a[href|="/itssosmooth"]
+a[href|="/itssosmooth"],
+a[href|="/doeshelooklikeafilly"],
+a[href|="/scootawings"],
+a[href|="/rdlookwhatweredealingwith"],
+a[href|="/endlessbreadsticks"]
 {
     display: block;
     clear: none;
@@ -1632,5 +1636,67 @@ a[href|="/itssosmooth"]
 	width: 249px;
 	background-position: -0px -560px;
 }
-
+a[href|="/doeshelooklikeafilly"]
+{
+	width: 148px;
+	background-position: -249px -560px;
+}
+a[href|="/scootawings"]
+{
+	width: 141px;
+	background-position: -0px -700px;
+}
+a[href|="/rdlookwhatweredealingwith"]
+{
+	width: 128px;
+	background-position: -141px -700px;
+}
+a[href|="/endlessbreadsticks"]
+{
+	width: 351px;
+	height: 200px;
+	background-position: -0px -840px;
+}
 /* end sheet 11 */
+
+
+/* sheet 12 */
+a[href|="/flutterchrysalisscared"],
+a[href|="/flutteralltheanimals"],
+a[href|="/killme"],
+a[href|="/bpwhatdididrinklastnight"],
+a[href|="/bpwinehat"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet12%%)
+}
+a[href|="/flutterchrysalisscared"]
+{
+	width: 155px;
+	background-position: -0px -0px;
+}
+a[href|="/flutteralltheanimals"]
+{
+	width: 139px;
+	background-position: -155px -0px;
+}
+a[href|="/killme"]
+{
+	width: 168px;
+	background-position: -0px -140px;
+}
+a[href|="/bpwhatdididrinklastnight"]
+{
+	width: 121px;
+	background-position: -168px -140px;
+}
+a[href|="/bpwinehat"]
+{
+	width: 130px;
+	height: 200px;
+	background-position: -0px -840px;
+}
+/* end sheet 12 */
