--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -7,7 +7,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 
 /* Banner image and associated height values */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%fuckyoucheese2%%);
+   background: url(%%rdsCQR9%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 237px; /* 237 for meat's nice banner and general banner size */
@@ -495,22 +495,44 @@ a[href|='/surbarf'], a[href|='/sursmelledyourcloset'] {width:273px; height:152px
 a[href|='/trixieplot'] {width:152px; height:116px; background-position: -0px -1698px}
 
 
-a[href|='/chrysshake'], a[href|='/queenshake'], a[href|='/cinnapie'], a[href|='/espbanana'], a[href|='/moonpie'], a[href|='/ruined'], a[href|='/samuraijack'], a[href|='/snuggle'], a[href|='/twichangeling'], a[href|='/wmdiscord'] {
+a[href|='/ajhorror'], a[href|='/celestea'], a[href|='/notcoffee'], a[href|='/chibinmm'], a[href|='/chrysshake'], a[href|='/queenshake'], a[href|='/cinnapie'], a[href|='/colgateshock'], a[href|='/outoftoothpaste'], a[href|='/disjizz'], a[href|='/dizjizz'], a[href|='/dizzlejizzle'], a[href|='/espbanana'], a[href|='/gildairballoon'], a[href|='/hurrdurrcolgate'], a[href|='/moonpie'], a[href|='/notimpressed'], a[href|='/pieinthesky'], a[href|='/pinkiememe'], a[href|='/pptoofar'], a[href|='/rdsucks'], a[href|='/ruined'], a[href|='/samuraijack'], a[href|='/snuggle'], a[href|='/twichangeling'], a[href|='/wmdiscord'] {
     display: block;
     clear: none;
     float: left;
     background-image: url(%%table12%%)
     }
 
-a[href|='/chrysshake'], a[href|='/queenshake'] {width:114px; height:152px; background-position: -102px -0px}
-a[href|='/cinnapie'] {width:132px; height:149px; background-position: -131px -152px}
-a[href|='/espbanana'] {width:183px; height:202px; background-position: -0px -708px}
-a[href|='/moonpie'] {width:252px; height:125px; background-position: -0px -910px}
-a[href|='/ruined'] {width:308px; height:152px; background-position: -0px -1035px}
-a[href|='/samuraijack'] {width:102px; height:152px; background-position: -0px -0px}
-a[href|='/snuggle'] {width:131px; height:152px; background-position: -0px -152px}
-a[href|='/twichangeling'] {width:150px; height:202px; background-position: -0px -304px}
-a[href|='/wmdiscord'] {width:176px; height:202px; background-position: -0px -506px}
+a[href|='/ajhorror'] {width:120px; height:152px; background-position: -0px -471px}
+a[href|='/celestea'], a[href|='/notcoffee'] {width:171px; height:152px; background-position: -0px -1129px}
+a[href|='/chibinmm'] {width:142px; height:152px; background-position: -142px -775px}
+a[href|='/chrysshake'], a[href|='/queenshake'] {width:114px; height:152px; background-position: -0px -319px}
+a[href|='/cinnapie'] {width:132px; height:149px; background-position: -131px -623px}
+a[href|='/colgateshock'], a[href|='/outoftoothpaste'] {width:106px; height:152px; background-position: -104px -167px}
+a[href|='/disjizz'], a[href|='/dizjizz'], a[href|='/dizzlejizzle'] {width:117px; height:127px; background-position: -114px -319px}
+a[href|='/espbanana'] {width:183px; height:202px; background-position: -0px -1483px}
+a[href|='/gildairballoon'] {width:187px; height:202px; background-position: -0px -1685px}
+a[href|='/hurrdurrcolgate'] {width:142px; height:127px; background-position: -0px -775px}
+a[href|='/moonpie'] {width:252px; height:125px; background-position: -0px -1887px}
+a[href|='/notimpressed'] {width:92px; height:167px; background-position: -84px -0px}
+a[href|='/pieinthesky'] {width:302px; height:94px; background-position: -0px -2012px}
+a[href|='/pinkiememe'] {width:84px; height:152px; background-position: -0px -0px}
+a[href|='/pptoofar'] {width:131px; height:127px; background-position: -120px -471px}
+a[href|='/rdsucks'] {width:104px; height:152px; background-position: -0px -167px}
+a[href|='/ruined'] {width:308px; height:152px; background-position: -0px -2106px}
+a[href|='/samuraijack'] {width:102px; height:152px; background-position: -176px -0px}
+a[href|='/snuggle'] {width:131px; height:152px; background-position: -0px -623px}
+a[href|='/twichangeling'] {width:150px; height:202px; background-position: -0px -927px}
+a[href|='/wmdiscord'] {width:176px; height:202px; background-position: -0px -1281px}
+
+
+a[href|='/bigmad'] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%table13%%)
+    }
+
+a[href|='/bigmad'] {width:120px; height:152px; background-position: -0px -0px}
 
 
 a[href|='/bmwat'], a[href|='/ch35'], a[href|='/chnuzzle'], a[href|='/cheerious'], a[href|='/cheerlikesit'], a[href|='/cmcexcited'], a[href|='/cordwithit'], a[href|='/crazypie'], a[href|='/derpoops'], a[href|='/disamused'], a[href|='/disangry'], a[href|='/disexcited'], a[href|='/diskate'], a[href|='/foryou'], a[href|='/genetics'], a[href|='/genius'], a[href|='/gildafury'], a[href|='/herhorn'], a[href|='/gildafriendship'], a[href|='/hipstertrixie'], a[href|='/iwapprove'], a[href|='/noidea'], a[href|='/notenoughbooks'], a[href|='/rarimad'], a[href|='/twinuzzle'] {
@@ -877,6 +899,7 @@ a[href='/sp'] { display: inline-block; padding-right: 100%; }
 
 /* Replacing somebody's name? Add it to the list here. */
 a.author[href$="-20"],
+a.author[href$="CarlosAmuroRay"],
 a.author[href$="numberlock"],
 a.author[href$="CodenameToon"],
 a.author[href$="thedarklordkyp"],
@@ -972,6 +995,7 @@ content: "";
 /* Replacing somebody's name? Add it to the list here too. */
 a.author[href$="-20"]:before,
 a.author[href$="CodenameToon"]:before,
+a.author[href$="CarlosAmuroRay"]:before,
 a.author[href$="numberlock"]:before,
 a.author[href$="thedarklordkyp"]:before,
 a.author[href$="fwinest_JediThug"]:before,
@@ -1066,6 +1090,7 @@ visibility:visible!important;
     content:"Princess "
     }*/
 a.author[href$="CodenameToon"]:before {content:"Coggler"}
+a.author[href$="CarlosAmuroRay"]:before {content:"Chuck"}
 a.author[href$="-20"]:before {content:"“just a douchebag”"}
 a.author[href$="numberlock"]:before {content:"BeerPony"}
 a.author[href$="thedarklordkyp"]:before {content:"A_Drunk_Changeling"}
@@ -1124,7 +1149,7 @@ a.author[href$=Generic_Builder]:before { content:"Genewic Bwuilda" }
 a.author[href$=volcano_bakemeats]:before { content:"Madam Le Bake" }
 a.author[href$=DaylightDarkle]:before { content:"Twilight Sparkle" }
 a.author[href$=Chillusion]:before { content:"Cchhiilllluussiioonn" }
-a.author[href$=Esplin]:before {content:"AAAAAA"}
+a.author[href$=Esplin]:before {content:"something witty"}
 a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
 a.author[href$=DarqWolff]:before { content:"[](/DarqWolff)" }
 a.author[href$=cheesemoo]:before { content:"Cheesemeow" }
@@ -1140,7 +1165,7 @@ a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
 a.author[href$=herabek]:before {content:"420 BLAZE IT FGT"}
-a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseMissingMoonies" }
+a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseMoonAsses" }
 a.author[href$=Zovistograt]:before { content:'[](/ww20 “Needy Bitch”)' }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in the Clouds" }
@@ -1294,6 +1319,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 
 
 /* Any pre/post-name flair stuff goes here */ 
+.tagline a.author[href$="/Username_Steve"]:before,
 .tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
 .tagline a.author[href$="/245001"]:before,
@@ -1318,6 +1344,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 }
 
 /* Flour sack flair for anyone we've noticed that has flair disabled. Don't forget to add them above too.*/ 
+.tagline a.author[href$="/Username_Steve"]:before,
 .tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/EvanMacIan"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
