--- a/source-css/mylittlefoodmanes.css
+++ b/source-css/mylittlefoodmanes.css
@@ -1099,6 +1099,18 @@ a[href|="/potatojob"]
 
 
 
+a[href|="/genericbuilder"]
+{
+
+ background-image: url(%%genericbuilder%%);
+    clear: none;
+    display: block;
+    float: left;
+    height: 153px;
+    width: 153px;
+}
+
+
 
 /*** Title Box ***/
 
