--- a/source-css/mylittlefortress.css
+++ b/source-css/mylittlefortress.css
@@ -675,28 +675,28 @@ a[href="/freakout"]:hover:after {
       }
      
     .titlebox form {
-    position: static
+    position: static;
     }
      
     .titlebox .usertext-body .md ol {
     width: auto;
-    background: url(%%csheadshot%%) no-repeat scroll 18px 3px #fff;
-    border: 2px solid #b13637;
+    background: url(%%compcube%%) no-repeat scroll 1px 1px #fff;
+    border: 3px solid #761880;
     position: absolute;
-    top: 18px;
+    top: 10px;
     left: 158px;
-    z-index: 50;
-    margin: 20px 410px 0px 0px;
-    padding: 15px 10px 10px 50px;
+    margin: 60px 410px 0px 0px;
+    padding: 30px 4px 5px 60px;
     list-style: none;
     display: block;
     white-space: normal;
     overflow: hidden;
-    border-radius:10px;
-    z-index: 10000000;
+    border-radius:1px;
+    z-index: 1000000;
     }
      
     .titlebox .usertext-body .md ol li {
-    margin: 1px;
-    list-style: none
+    margin-top: -11px;
+    padding-bottom: 14px;
+    list-style: none;
     }
