--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -553,6 +553,14 @@ a[href|="/pinkbie"] {
     height: 150px;
     background-image: url(%%pinkbie%%) 
     }
+a[href|="/pplipbite"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 111px;
+    background-image: url(%%pplipbite%%) 
+    }
 
 
 
