--- a/source-css/ploungemafia.css
+++ b/source-css/ploungemafia.css
@@ -520,7 +520,7 @@ a.author[href$="DiscordDraconequus"] {
     letter-spacing: -20px
     }
 a.author[href$="DiscordDraconequus"]:after {
-    content: "AaronDraconequus";
+    content: "FluffyDraconequus";
     font-size: 10px !important;
     visibility: visible !important;
     display: block;
