--- a/source-css/themirishponies.css
+++ b/source-css/themirishponies.css
@@ -1288,7 +1288,7 @@ a[href|="/egstare"] {
 
 /* Tavimotes */
 
-a[href|="/tavijumpforjoy"],a[href|="/taviwink"],a[href|="/tavisrsly"],a[href="/taviskeptical"],a[href="/tavinap"],a[href="/tavilie"],a[href="/taviyay"],a[href="/tav3sleep"],a[href="/tav3nuzzle"],a[href="/lyralyre"],a[href="/tavicello"]
+a[href|="/tavijumpforjoy"],a[href|="/socktavia"],a[href|="/tavisrsly"],a[href="/taviskeptical"],a[href="/tavinap"],a[href="/tavilie"],a[href="/taviyay"],a[href="/tav3sleep"],a[href="/tav3nuzzle"],a[href="/lyralyre"],a[href="/tavicello"]
 {display:block;clear:none;float:left;background-image:url(%%testtest%%)}
 
 a[href="/tavijumpforjoy"] {
@@ -1297,7 +1297,7 @@ Width: 100px;
 Height: 136px;
 }
 
-a[href="/taviwink"] {
+a[href="/socktavia"] {
 background-position: -100px -0px;
 Width: 100px;
 Height: 182px;
