--- a/source-css/twilightsparkle.css
+++ b/source-css/twilightsparkle.css
@@ -356,7 +356,7 @@ a[href*="nsfw"].thumbnail.nsfw
 /***********
 TS Emoticons
 ***********/
-a[href|="/ts00"], a[href|="/ts10"], a[href|="/ts20"], a[href|="/ts01"], a[href|="/ts11"], a[href|="/ts21"], a[href|="/ts02"], a[href|="/ts12"], a[href|="/ts22"], a[href|="/ts03"], a[href|="/ts13"], a[href|="/ts23"], a[href|="/ts04"], a[href|="/ts14"], a[href|="/ts24"], a[href|="/ts05"], a[href|="/ts15"], a[href|="/ts25"], a[href|="/ts06"], a[href|="/ts16"], a[href|="/ts26"], a[href|="/tshappy"], a[href|="/tsiwin"], a[href|="/tspillow"], a[href|="/tstardy"], a[href|="/tssad"], a[href|="/tsgrrr"], a[href|="/tsgrr"], a[href|="/tsawww"], a[href|="/tsyeah"], a[href|="/tsglare"], a[href|="/tspromise"], a[href|="/tsbroken"], a[href|="/tsawkward"], a[href|="/tsmyhorn"], a[href|="/tsilikethis"], a[href|="/tssure"], a[href|="/tsannoyed"], a[href|="/tsderp"], a[href|="/tscrazysmile"], a[href|="/tsunsure"], a[href|="/tscurious"], a[href|="/tsbashful"], a[href|="/tspillowdance"], a[href|="/ts07"], a[href|="/tsstare"]
+a[href|="/ts00"], a[href|="/ts10"], a[href|="/ts20"], a[href|="/ts01"], a[href|="/ts11"], a[href|="/ts21"], a[href|="/ts02"], a[href|="/ts12"], a[href|="/ts22"], a[href|="/ts03"], a[href|="/ts13"], a[href|="/ts23"], a[href|="/ts04"], a[href|="/ts14"], a[href|="/ts24"], a[href|="/ts05"], a[href|="/ts15"], a[href|="/ts25"], a[href|="/ts06"], a[href|="/ts16"], a[href|="/ts26"], a[href|="/tshappy"], a[href|="/tsiwin"], a[href|="/tspillow"], a[href|="/tstardy"], a[href|="/tssad"], a[href|="/tsgrrr"], a[href|="/tsgrr"], a[href|="/tsawww"], a[href|="/tsyeah"], a[href|="/tsglare"], a[href|="/tspromise"], a[href|="/tsbroken"], a[href|="/tsawkward"], a[href|="/tsmyhorn"], a[href|="/tsilikethis"], a[href|="/tssure"], a[href|="/tsannoyed"], a[href|="/tsderp"], a[href|="/tscrazysmile"], a[href|="/tsunsure"], a[href|="/tscurious"], a[href|="/tsbashful"], a[href|="/tspillowdance"], a[href|="/ts07"], a[href|="/tsstare"],a[href|="/tslibrary"],a[href|="/tssquishyface"],a[href|="/tsohmygodimapurplemarshmallow"],a[href|="/squishypurplelibrarymarshmallow"],a[href|="/tssquee"],a[href|="/ts17"],a[href|="/ts27"]
 {
  display: block;
  clear: none;
@@ -366,7 +366,7 @@ a[href|="/ts00"], a[href|="/ts10"], a[href|="/ts20"], a[href|="/ts01"], a[href|=
  background-image: url(%%emotes-ts%%) !important
 }
 
-a[href|="/rts00"], a[href|="/rts10"], a[href|="/rts20"], a[href|="/rts01"], a[href|="/rts11"], a[href|="/rts21"], a[href|="/rts02"], a[href|="/rts12"], a[href|="/rts22"], a[href|="/rts03"], a[href|="/rts13"], a[href|="/rts23"], a[href|="/rts04"], a[href|="/rts14"], a[href|="/rts24"], a[href|="/rts05"], a[href|="/rts15"], a[href|="/rts25"], a[href|="/rts06"], a[href|="/rts16"], a[href|="/rts26"], a[href|="/rtshappy"], a[href|="/rtsiwin"], a[href|="/rtspillow"], a[href|="/rtstardy"], a[href|="/rtssad"], a[href|="/rtsgrrr"], a[href|="/rtsgrr"], a[href|="/rtsawww"], a[href|="/rtsyeah"], a[href|="/rtsglare"], a[href|="/rtspromise"], a[href|="/rtsbroken"], a[href|="/rtsawkward"], a[href|="/rtsmyhorn"], a[href|="/rtsilikethis"], a[href|="/rtssure"], a[href|="/rtsannoyed"], a[href|="/rtsderp"], a[href|="/rtscrazysmile"], a[href|="/rtsunsure"], a[href|="/rtscurious"], a[href|="/rtsbashful"], a:hover[href|="/tspillowdance"], a[href|="/rts07"], a[href|="/rtsstare"]
+a[href|="/rts00"], a[href|="/rts10"], a[href|="/rts20"], a[href|="/rts01"], a[href|="/rts11"], a[href|="/rts21"], a[href|="/rts02"], a[href|="/rts12"], a[href|="/rts22"], a[href|="/rts03"], a[href|="/rts13"], a[href|="/rts23"], a[href|="/rts04"], a[href|="/rts14"], a[href|="/rts24"], a[href|="/rts05"], a[href|="/rts15"], a[href|="/rts25"], a[href|="/rts06"], a[href|="/rts16"], a[href|="/rts26"], a[href|="/rtshappy"], a[href|="/rtsiwin"], a[href|="/rtspillow"], a[href|="/rtstardy"], a[href|="/rtssad"], a[href|="/rtsgrrr"], a[href|="/rtsgrr"], a[href|="/rtsawww"], a[href|="/rtsyeah"], a[href|="/rtsglare"], a[href|="/rtspromise"], a[href|="/rtsbroken"], a[href|="/rtsawkward"], a[href|="/rtsmyhorn"], a[href|="/rtsilikethis"], a[href|="/rtssure"], a[href|="/rtsannoyed"], a[href|="/rtsderp"], a[href|="/rtscrazysmile"], a[href|="/rtsunsure"], a[href|="/rtscurious"], a[href|="/rtsbashful"], a:hover[href|="/tspillowdance"], a[href|="/rts07"], a[href|="/rtsstare"],a[href|="/rtslibrary"],a[href|="/rtssquishyface"],a[href|="/rtsohmygodimapurplemarshmallow"],a[href|="/rsquishypurplelibrarymarshmallow"],a[href|="/rtssquee"],a[href|="/rts17"],a[href|="/rts27"]
 {
  display: block;
  clear: none;
@@ -443,6 +443,15 @@ a[href|="/ts26"], a[href|="/rts26"], a[href|="/tsbashful"], a[href|="/rtsbashful
 a[href|="/ts07"], a[href|="/rts07"], a[href|="/tsstare"], a[href|="/rtsstare"] {
  background-position: -0px -490px;
 }
+
+a[href|="/ts17"], a[href|="/rts17"], a[href|="/tslibrary"], a[href|="/rtslibrary"],a[href|="/tssquishyface"],a[href|="/tsohmygodimapurplemarshmallow"],a[href|="/rtssquishyface"],a[href|="/rtsohmygodimapurplemarshmallow"],a[href|="/squishypurplelibrarymarshmallow"],a[href|="/rsquishypurplelibrarymarshmallow"] {
+ background-position: -70px -490px;
+}
+
+a[href|="/ts27"], a[href|="/rts27"], a[href|="/tssquee"], a[href|="/rtssquee"] {
+ background-position: -140px -490px;
+}
+
 
 a[href|="/trixie"],a[href|="/twilightsealofdisapproval"]
 {
